# transformers-implementation

./: Makefile  embedding.ipynb  feed_forward_and_norm.ipynb  notebook_tranformer.ipynb  pyproject.toml  transfomer.ipynb
src/local_transformers/: __init__.py
src/local_transformers/transcoders/: decoder.py  encoder.py
src/local_transformers/transformers_blocks/: __init__.py  attention.py  word_embedding.py
src/local_transformers/transformers_v0/: transformer.py
src/notebooks/: embedding.ipynb  feed_forward_and_norm.ipynb  fraud_not_fraud.ipynb  fraud_not_fraud_lstm.ipynb  fraud_not_fraud_lstm_all_features.ipynb  fraud_not_fraud_lstm_attention.ipynb  transfomer_test.ipynb  transformer_classification.ipynb
src/notebooks/transformer_blocks/: attention.ipynb
src/utils/: __init__.py  custom_dataset.py  early_stopping.py  pre_trained_tokenizer.py
transformers_implementation/notebooks/: attention.ipynb  embedding.ipynb  transfomer.ipynb
transformers_implementation/transformers/: __init__.py
transformers_implementation/transformers/transcoders/: decoder.py  encoder.py
transformers_implementation/transformers/transformers_blocks/: __init__.py  feed_forward.py
transformers_implementation/transformers/transformers_v0/: __init__.py  transformer
